# workingtitle-backend

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/api/: types.rs
src/auth/: mod.rs  types.rs
src/db/: crud.rs  mod.rs
src/events/: mod.rs  models.rs
src/tickets/: mod.rs  models.rs
src/user/: mod.rs  user_service.rs
src/users/: mod.rs  models.rs
src/utility/: mod.rs
