[package]
name = "workingtitle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["tracing", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3"
mongodb = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
